Footer update, social page added

--- a/index.html
+++ b/index.html
@@ -107,15 +107,19 @@
 			<div class="boxtitledg" style="background: #dfe675; color: #008377">I Got My Antibodies</div>
 			<div class="hpaccc tc m10 tm10" style="padding-top: 0;">Did you get your flu shot? Show your bandaid and convince others to do the same by sharing your photo with the hashtag #FluShotCentral</div>
 			<img src="assets/img/fulligmuckup.jpg">
+			<div class="ssbtn">
+				<a href="ssmedia.html">FFC on Instagram</a>
+			</div>
 		</div>
 	</div>
 
 	<!--maybe copyrighted?-->
 	<footer>
 		<div class="container tc p5">
-			<div class="c33"><a href="aboutffc.html" class="p10">About FluShotCentral.com</a></div>
-			<div class="c33"><a href="aboutteamwow.html" class="p10">About Team Wow</a></div>
-			<div class="c33"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
+			<div class="c25"><a href="aboutffc.html" class="p10">About FFC</a></div>
+			<div class="c25"><a href="aboutteamwow.html" class="p10">Team Wow</a></div>
+			<div class="c25"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
+			<div class="c25"><a href="ssmedia.html" class="p10">FFC on IG</a></div>
 		</div>
 		<p class="tc a1" style="border-bottom: 1px dotted #9AD3CC">Jumps by Zachary Nelson at Unsplash</p>
 		<p class="tc a1">&copy; 2020 Flu Shot Central by Team Wow.</p>
