--- a/infoprevent.html
+++ b/infoprevent.html
@@ -118,10 +118,11 @@
 	<!--maybe copyrighted?-->
 	<footer>
 	<div class="container tc p5">
-		<div class="c33"><a href="aboutffc.html" class="p10">About FluShotCentral.com</a></div>
-		<div class="c33"><a href="aboutteamwow.html" class="p10">About Team Wow</a></div>
-		<div class="c33"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
-	</div>
+			<div class="c25"><a href="aboutffc.html" class="p10">About FFC</a></div>
+			<div class="c25"><a href="aboutteamwow.html" class="p10">Team Wow</a></div>
+			<div class="c25"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
+			<div class="c25"><a href="ssmedia.html" class="p10">FFC on IG</a></div>
+		</div>
 		<p class="tc a1">&copy; 2020 Flu Shot Central by Team Wow.</p>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
