--- a/ssmedia.html
+++ b/ssmedia.html
@@ -2,19 +2,14 @@
 <html>
 
 <head>
-	<title>About Flu Shot Central</title>
+	<title>Flu Shot Central</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 	<style>
-		
-		.pllink{
-			color: #fff;
-			background: #9AD3CC;
-			padding: 5px 10px;
-			border-radius: 10px;
-			font-size: 18px;
+		.sssocb{
+			border: 3px solid #9AD3CC
 		}
 
 	</style>
@@ -53,49 +48,21 @@
 		</div>
 	</header>
 
-
-<div class="container p10">
-	<div class="hpaccc">
-		This is a school project for MultiMedia Programming class(MMP460), and this a group project useing three different types of media try to solve a social issue. This website is trying convince college student to get their flu shot, since less than 50% of college student in New Yoek have flu shot.
-	</div>
+<div class="container">
+	<div class="c50 p10"><img src="assets/img/socialpost1@2x-100.jpg" class="sssocb"></div>
+	<div class="c50 p10"><img src="assets/img/socialpost2@2x-100.jpg" class="sssocb"></div>
 </div>
 
-
-<div class="container p10">
-	<div class="hpaccc">
-		New York has the largest student population in the US. We hope we can inform them and increase Flu vaccination rates. 
-	</div>
-</div>
-
-<div class="container p10">
-<div>
-	<a href="https://github.com/lepingjiang/flu-shot-central-" class="pllink">View Code on GitGub</a>
-</div>
-</div>
-
-<div class="container p10">
-	<div class="w33">
-		<img src="assets/img/hompage.png" alt="">
-	</div>
-
-	<div class="w33">
-		<img src="assets/img/perpage.png" alt="">
-	</div>
-
-	<div class="w33">
-		<img src="assets/img/locpage.png" alt="">
-	</div>
-</div>
 
 	<!--maybe copyrighted?-->
 	<footer>
-		<div class="container tc p5">
-			<div class="c25"><a href="aboutffc.html" class="p10" style="background: #dfe675;border-radius: 10px">About FFC</a></div>
+	<div class="container tc p5">
+			<div class="c25"><a href="aboutffc.html" class="p10">About FFC</a></div>
 			<div class="c25"><a href="aboutteamwow.html" class="p10">Team Wow</a></div>
 			<div class="c25"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
-			<div class="c25"><a href="ssmedia.html" class="p10">FFC on IG</a></div>
+			<div class="c25"><a href="ssmedia.html" class="p10" style="background: #dfe675;border-radius: 10px">FFC on IG</a></div>
 		</div>
-		<p class="tc a1">&copy; 2020 Flu Shot Central by Team Wow.</p>
+		<p class="tc a1 p5">&copy; 2020 Flu Shot Central by Team Wow. IG Post Full Muckup</p>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script>
